# adversarial_memory

./: .gitignore  README.md  coexisting_facts.sh  conditional_facts.sh  demo.py  generate_dataset.py  long_hop.sh  personal_retrieval.sh  pyproject.toml  requirements.txt
SimpleMem/OmniSimpleMem/: .gitignore
SimpleMem/utils/: llm_client.py
a-mem/agentic_memory/: llm_controller.py  memory_system.py
app/: chat.py  chat_ui.py
data_plots/: load_data.py  plot_acc_vs_tokens_per_memory.py  plot_all.py  plot_all_errors_vs_k.py  plot_coexisting_by_n_facts.py  plot_errors_vs_k.py  plot_memory_errors_vs_k.py  plot_report.py  plot_success_vs_k.py
dataset_utils/: dedup.py  generate_custom_persona_dataset.py  generate_essay.py  generate_misleading_persona_dataset.py  hypothesis_contamination.py
dataset_utils/coexisting_facts/: generate_coexisting_facts_dataset.py
datasets/: README.md  custom_persona_dataset.csv  generate_essay.py  generate_incorrect_math_solutions.py  hypothesis_contamination.py  math_algebra_train_incorrect.csv  misleading_persona_dataset.csv  truthfulqa_assertives.csv  truthfulqa_implications.csv  truthfulqa_implications_essays.csv
examples/: evaluation_example.py  sample_dataset.json
experimental_results/: README.md
grading/: README.md  build_sample.py  grades.json  grading_ui.py  summary.json  summary.py
playground/: grade_results.py  mem0_hypothesis_assertions_responses.csv  mem0_hypothesis_results.json  mem0_hypothesis_results_graded.json  mem0_hypothesis_test.py  print_2x2.py  utils.py
src/: __init__.py  chat.py  dataset.py  evaluation.py  llm.py  memory.py  prompt_templates.py  tokenizer.py  types.py
src/amem/: __init__.py  (+1 more)
tests/: __init__.py
(+77 files in other folders)
