[project]
name = "adversarial-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-memory",
    "anthropic>=0.79.0",
    "dotenv>=0.9.9",
    "mem0ai>=1.0.3",
    "openai>=2.17.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "tiktoken>=0.12.0",
]

[tool.uv.sources]
agentic-memory = { git = "https://github.com/agiresearch/A-mem.git" }
