[project]
name = "adversarial-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "anthropic>=0.79.0",
    "bert-score>=0.3.13",
    "chromadb>=1.5.8",
    "datasets>=4.6.1",
    "datasketch>=1.10.0",
    "dateparser>=1.3.0",
    "dotenv>=0.9.9",
    "lancedb>=0.30.2",
    "litellm>=1.0.0",
    "mem0ai>=1.0.3",
    "nltk>=3.8",
    "openai>=2.17.0",
    "pylance>=4.0.1",
    "pytest>=9.0.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "rouge-score>=0.1.2",
    "ruff>=0.15.0",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "streamlit>=1.28.0",
    "tantivy>=0.25.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
